--- a/ezShopping/Properties/Resources.resx
+++ b/ezShopping/Properties/Resources.resx
@@ -133,6 +133,9 @@
   <data name="email_50px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\email_50px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="about_32px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\about_32px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="email_50px1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\email_50px1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -148,7 +151,7 @@
   <data name="member-icon-png-21" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\member-icon-png-21.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="about_32px" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\about_32px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="LogoGRAU" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\LogoGRAU.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
